# myToDo

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
src/datatypes/: list.c  list.h  path.c  path.h
src/ui/: menu.c  menu.h
src/ui/pages/: list.c  list.h  main_page.c  main_page.h  notes_page.c  notes_page.h  page_changer.c  page_changer.h  path.c
src/ui/widgets/: menu.c  menu.h
